[tool.poetry]
name = "enquery-postgres"
version = "0.1.0"
description = ""
authors = ["sam <contact@justsam.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pgvector = "^0.3.2"
sentence-transformers = "^3.0.1"
psycopg2-binary = "^2.9.9"
psycopg = {extras = ["binary"], version = "^3.2.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
